--- a/pom.xml
+++ b/pom.xml
@@ -159,7 +159,7 @@
                     <transformers>
                         <!--Makes a manifest file - necessary for launch -->
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>launch.Main</mainClass>
+                            <mainClass>main</mainClass>
                         </transformer>
                         <!-- includes Services in jar-->
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
